fix(blog): fix displaying link back on mobile

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -526,7 +526,7 @@
     }
   }
 
-  & .blog__link-back {
+  & .link--back {
     @media (--mobile-viewport) {
       display: none;
     }
